--- a/404.html
+++ b/404.html
@@ -23,8 +23,8 @@
 <meta name="mobile-web-app-capable" content="yes">
 
 <meta name="author" content="reallyli" />
-  <meta name="description" content="Hugo theme jane example site." />
-  <meta name="keywords" content="Hugo, theme, jane" />
+  <meta name="description" content="reallyli poros blog" />
+  <meta name="keywords" content="reallyli, poros, phpreallyli" />
 
 
 
@@ -57,16 +57,16 @@
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Hugo theme jane example site." />
+<meta property="og:description" content="reallyli poros blog" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Hugo theme jane example site.">
+<meta itemprop="description" content="reallyli poros blog">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Hugo theme jane example site."/>
+<meta name="twitter:description" content="reallyli poros blog"/>
 
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
@@ -77,6 +77,17 @@
   <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
 <![endif]-->
 
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-111870261-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 
 
 
