about page open comment

--- a/about/index.html
+++ b/about/index.html
@@ -385,6 +385,26 @@ if (!doNotTrack) {
 
 
 
+  
+  
+    <div class="post bg-white">
+      <script src="https://utteranc.es/client.js"
+            repo= "xianmin/comments-for-hugo-theme-jane"
+            issue-term="pathname"
+            crossorigin="anonymous"
+            async>
+      </script>
+    </div>
+  
+
+  
+
+  
+
+  
+  
+    
+
 
 
         </div>
